<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:theme="@style/Toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/profile_title"
        />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white_alabaster"
        android:clipToPadding="false"
        android:padding="@dimen/spacing_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_list_item"
            android:orientation="vertical"
            >

            <TextView
                style="@style/SectionHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_section_account_info"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fullNameFieldParent"
                style="@style/InputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_16"
                android:hint="@string/full_name"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fullNameField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailFieldParent"
                style="@style/InputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_16"
                android:layout_marginTop="@dimen/spacing_24"
                android:hint="@string/email"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/patientCodeFieldParent"
                style="@style/InputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_16"
                android:layout_marginTop="@dimen/spacing_24"
                android:hint="@string/patient_code"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/patientCodeField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/spacing_40"
                android:background="@color/gray_mercury"
                />

            <TextView
                style="@style/SectionHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_section_contacts"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneNumberFieldParent"
                style="@style/InputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_16"
                android:hint="@string/phone"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneNumberField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/contactEmailFieldParent"
                style="@style/InputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_16"
                android:layout_marginTop="@dimen/spacing_24"
                android:hint="@string/email"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/contactEmailField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/addressFieldParent"
                style="@style/InputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_16"
                android:layout_marginTop="@dimen/spacing_24"
                android:hint="@string/address"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addressField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_16"
                android:layout_marginTop="@dimen/spacing_24"
                android:orientation="horizontal"
                >

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/cityFieldParent"
                    style="@style/InputField"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/city"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/cityField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <Space
                    android:layout_width="@dimen/spacing_24"
                    android:layout_height="wrap_content"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/zipFieldParent"
                    style="@style/InputField"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/zip"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/zipField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/countryFieldParent"
                style="@style/InputField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_16"
                android:layout_marginTop="@dimen/spacing_24"
                android:hint="@string/country"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/countryField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/spacing_16"
                android:layout_marginVertical="@dimen/spacing_24"
                android:padding="@dimen/spacing_16"
                android:text="@string/profile_btn_save"
                android:textColor="@color/white"
                />

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>